--- a/app/src/main/res/layout/activity_azalea_garden_tour.xml
+++ b/app/src/main/res/layout/activity_azalea_garden_tour.xml
@@ -9,7 +9,7 @@
         android:id="@+id/homeButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/CFGC_Logo"
+        android:background="@drawable/cfgc_logo"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
