--- a/app/src/main/res/layout/activity_battery_island_committee.xml
+++ b/app/src/main/res/layout/activity_battery_island_committee.xml
@@ -9,12 +9,12 @@
         android:id="@+id/homeButton3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/CFGC_Logo"
+        android:background="@drawable/cfgc_logo"
         android:clickable="true"
+        android:focusable="true"
         app:layout_constraintBottom_toTopOf="@+id/guideline10"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:focusable="true" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/committeeLabelTextView"
