--- a/app/src/main/res/layout/activity_contact_list.xml
+++ b/app/src/main/res/layout/activity_contact_list.xml
@@ -10,7 +10,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="12dp"
         android:orientation="vertical"
         android:scrollbars="vertical"
 
@@ -35,7 +35,9 @@
         android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ellipse"/>
+        app:srcCompat="@drawable/ellipse"
+        android:layout_marginLeft="16dp"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/textView3"
@@ -43,12 +45,24 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="18dp"
-        android:text="The Cape Fear Garden Club, Inc."
+        android:text="@string/the_cape_fear_garden_club_inc"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView9"
-        app:layout_constraintTop_toTopOf="@+id/imageView9"/>
+        app:layout_constraintTop_toTopOf="@+id/imageView9"
+        android:layout_marginRight="16dp" />
+
+    <Switch
+        android:id="@+id/SortToggleSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="@string/sort_last"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView9" />
 
 </android.support.constraint.ConstraintLayout>
