--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -23,6 +23,11 @@
     <style name="NoTitleText">
         <item name="android:textSize">0sp</item>
         <item name="android:textColor">#00000000</item>
+    </style>
+
+    <style name="CustomSwitchColor" parent="Theme.AppCompat.Light">
+        <item name="android:thumbTint" tools:targetApi="lollipop">#BBBBBB</item>
+        <item name="android:trackTint" tools:targetApi="m">#BBBBBB</item>
     </style>
 
 </resources>
