--- a/app/src/main/res/layout/base_acl.xml
+++ b/app/src/main/res/layout/base_acl.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -29,7 +28,8 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/toolbar"/>
+        app:layout_constraintTop_toTopOf="@+id/toolbar"
+        android:layout_marginLeft="8dp" />
 
     <TextView
         android:id="@+id/tv_edit"
@@ -58,5 +58,6 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/toolbar"/>
-</android.support.constraint.ConstraintLayout>
+        app:layout_constraintTop_toTopOf="@+id/toolbar"
+        android:layout_marginRight="8dp" />
+</androidx.constraintlayout.widget.ConstraintLayout>
