--- a/app/src/main/res/layout/dialog_name.xml
+++ b/app/src/main/res/layout/dialog_name.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -12,7 +13,7 @@
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="16dp"
-        android:text="Edit Name"
+        android:text="@string/edit_name"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@android:color/background_dark"
@@ -27,7 +28,7 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
-        android:text="First Name"
+        android:text="@string/first_name"
         android:textColor="@android:color/background_dark"
         android:textSize="16sp"/>
     <EditText
@@ -36,7 +37,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"/>
+        android:layout_marginBottom="4dp"
+        android:importantForAutofill="no"
+        tools:ignore="LabelFor,TextFields" />
 
     <TextView
         android:id="@+id/lnTitle"
@@ -46,7 +49,7 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
-        android:text="Last Name"
+        android:text="@string/last_name"
         android:textColor="@android:color/background_dark"
         android:textSize="16sp"/>
     <EditText
@@ -56,6 +59,9 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="2dp"
-        android:fontFamily="sans-serif"/>
+        android:fontFamily="sans-serif"
+        android:importantForAutofill="no"
+        tools:ignore="LabelFor,TextFields"
+        tools:targetApi="jelly_bean" />
 
 </LinearLayout>
